Alpine with glibc and jdk 17 ForkJoinPool fix